--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -31,9 +31,11 @@
 \maketitle
 \mbox{}
 
-\section{Introduction}
-\input{thesis/introduction.tex}
-Test \cite{tetris}
-
+\input{introduction.tex}
+\input{objective.tex}
+\input{background.tex}
+\input{method.tex}
+\input{results.tex}
+\input{discussion.tex}
 \printbibliography
 \end{document}
