--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -12,42 +12,23 @@
 \usepackage{float}
 \usepackage{tikz}
 \usepackage{mathtools}
-\usepackage[ireport]{pkg/KTHEEtitlepage}
+\usepackage[ireport, eng]{pkg/KTHEEtitlepage}
 \DeclarePairedDelimiter\ceil{\lceil}{\rceil}
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 \usepackage[backend=biber]{biblatex}
 \addbibresource{references/bibliography.bib}
 
-\def\theauthor{Axel Riese \& André Nyström}
-\def\thedate{\today}
-
-\date{\thedate}
-\author{\theauthor}
-
-\def\assignment{Thesis}
-\title{\assignment}
+\input{config/config.tex}
 
 \begin{document}
-% Information to appear on the title page:
-\ititle{My Title}
-\isubtitle{My Subtitle}
-\iauthor{Me and Myself}
-\idate{2006}
-\irefnr{IR-EE-Dummy 2000:099}
+\ititle{\ctitle}
+\isubtitle{\csubtitle}
+\iauthor{\cauthor}
+\idate{\today}
+%\irefnr{IR-EE-Dummy 2000:099}
 
-\iaddress{Signal Processing\\
-  School of Electrical Engineering\\
-  Kungliga Tekniska Högskolan}
+\iaddress{\caddress}
 \makeititle
-
-% Everything below is exactly as for a normal document and 
-% the layout of that document should not be affected in any
-% way by the title page.
-
-\title{Short example of the KTHEEtitlepage package}
-\author{Mats Bengtsson}
-
-\maketitle
 
 \input{thesis/introduction.tex}
 \input{thesis/objective.tex}
