--- a/pkg/KTHEEtitlepage.sty
+++ b/pkg/KTHEEtitlepage.sty
@@ -138,22 +138,22 @@
 \newcommand{\displayKTHlogo}{%
 \if@eng
 \if@colour
-  \includegraphics[width=32mm]{pkg/kth_cmyk_electr_engine}%
+  \includegraphics[width=32mm]{pkg/logos/kth_cmyk.eps}%
 \else
   \if@ireport
     %% Black white
-    \includegraphics[width=32mm]{pkg/kth_svv_electr_engine}%
+    \includegraphics[width=32mm]{pkg/logos/kth_svv.eps}%
   \else% No logotype
   \mbox{}
   \fi
 \fi
 \else\if@sve
 \if@colour
-  \includegraphics[width=32mm]{pkg/kth_cmyk_elektro_systemtek}%
+  \includegraphics[width=32mm]{pkg/logos/kth_cmyk.eps}%
 \else
   \if@ireport
     %% Black white
-    \includegraphics[width=32mm]{pkg/kth_svv_elektro_systemtek}%
+    \includegraphics[width=32mm]{pkg/logos/kth_svv.eps}%
   \else% No logotype
   \mbox{}
   \fi
