add new reference

--- a/references/bibliography.bib
+++ b/references/bibliography.bib
@@ -11,3 +11,17 @@
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/cs-CC-0210020},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@article{candy,
+  author    = {Luciano Gual{\`{a}} and
+               Stefano Leucci and
+               Emanuele Natale},
+  title     = {Bejeweled, Candy Crush and other Match-Three Games are (NP-)Hard},
+  journal   = {CoRR},
+  volume    = {abs/1403.5830},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1403.5830},
+  timestamp = {Tue, 27 Jan 2015 12:07:55 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/GualaLN14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
