--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -12,6 +12,8 @@
 \usepackage{float}
 \usepackage{tikz}
 \usepackage{mathtools}
+\usepackage[backend=biber,style=numeric]{biblatex}
+\addbibresource{references/bibliography.bib}
 \DeclarePairedDelimiter\ceil{\lceil}{\rceil}
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
@@ -43,5 +45,9 @@ We will then start to define the rules of the game in a rigorous manner. Once we
 Lastly, if time permits, we can change the rules of our system to be more true to the actual game. For example could consider continuous sweeps, piece drop speed simulation and online versions. We will then try to prove our findings in this new system, which will hopefully tell us more about the original game.
 
 \section{References}
+So far we have identified three papers which we consider relevant for our project. One these is a description of Lumines strategies, the remaining two regards computational complexity in Tetris \cite{tetris} and Match-three puzzle games.
+
 \section{Time plan}
+
+\printbibliography
 \end{document}
