add more references

--- a/references/bibliography.bib
+++ b/references/bibliography.bib
@@ -25,3 +25,12 @@
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/GualaLN14},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@article{lumines,
+  title={LUMINES strategies},
+  author={Aloupis, Greg and Cardinal, Jean and Collette, S{\'e}bastien and Langerman, Stefan},
+  journal={Computers and Games},
+  pages={190--199},
+  year={2007},
+  publisher={Springer Berlin Heidelberg}
+}
