--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -16,6 +16,7 @@
 \usepackage{float}
 \usepackage{tikz}
 \usepackage{mathtools}
+\usepackage{calc}
 
 \usepackage[ireport, eng]{pkg/KTHEEtitlepage}
 \DeclarePairedDelimiter\ceil{\lceil}{\rceil}
