--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -1,1 +1,13 @@
 \section{Introduction}
+
+\begin{tikzpicture}
+    \filldraw[fill=gray, draw=black] (0,0) rectangle (1,1);
+    \filldraw[fill=white, draw=black] (1,0) rectangle (2,1);
+    \filldraw[fill=white, draw=black] (0,1) rectangle (1,2);
+    \filldraw[fill=gray, draw=black] (1,1) rectangle (2,2);
+
+    \filldraw[fill=gray, draw=black] (3,0) rectangle (4,1);
+    %\filldraw[fill=white, draw=black] (1,0) rectangle (2,1);
+    %\filldraw[fill=white, draw=black] (0,1) rectangle (1,2);
+    %\filldraw[fill=gray, draw=black] (1,1) rectangle (2,2);
+\end{tikzpicture}
