--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -23,6 +23,7 @@
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
 \input{config/config.tex}
+\input{pkg/blocks.tex}
 
 \begin{document}
 \ititle{\ctitle}
@@ -36,9 +37,9 @@
 
 \input{thesis/introduction.tex}
 \input{thesis/objective.tex}
-\input{thesis/background.tex}
-\input{thesis/method.tex}
-\input{thesis/results.tex}
-\input{thesis/discussion.tex}
+%\input{thesis/background.tex}
+%\input{thesis/method.tex}
+%\input{thesis/results.tex}
+%\input{thesis/discussion.tex}
 \printbibliography
 \end{document}
