--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -1,13 +1,16 @@
 \section{Introduction}
 
-\begin{tikzpicture}
-    \filldraw[fill=gray, draw=black] (0,0) rectangle (1,1);
-    \filldraw[fill=white, draw=black] (1,0) rectangle (2,1);
-    \filldraw[fill=white, draw=black] (0,1) rectangle (1,2);
-    \filldraw[fill=gray, draw=black] (1,1) rectangle (2,2);
-
-    \filldraw[fill=gray, draw=black] (3,0) rectangle (4,1);
-    %\filldraw[fill=white, draw=black] (1,0) rectangle (2,1);
-    %\filldraw[fill=white, draw=black] (0,1) rectangle (1,2);
-    %\filldraw[fill=gray, draw=black] (1,1) rectangle (2,2);
-\end{tikzpicture}
+\begin{figure}[H]
+    \centering
+    \resizebox{0.9\textwidth}{!}{
+    \begin{tikzpicture}
+        \lummonowhite{0}{0}
+        \lummonoblack{3}{0}
+        \lumlwhite{6}{0}
+        \lumlblack{9}{0}
+        \lumh{12}{0}
+        \lumx{15}{0}
+    \end{tikzpicture}
+    }
+    \caption{The six pieces of lumines: M\{W,B\}, L\{W,B\}, H and X}
+\end{figure}
