--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -13,4 +13,5 @@
     \end{tikzpicture}
     }
     \caption{The six pieces of lumines: M\{W,B\}, L\{W,B\}, H and X}
+    \label{fig:pieces}
 \end{figure}
