--- a/references/bibliography.bib
+++ b/references/bibliography.bib
@@ -1,15 +1,10 @@
-@article{tetris,
-  author    = {Erik D. Demaine and
-               Susan Hohenberger and
-               David Liben{-}Nowell},
-  title     = {Tetris is Hard, Even to Approximate},
-  journal   = {CoRR},
-  volume    = {cs.CC/0210020},
-  year      = {2002},
-  url       = {http://arxiv.org/abs/cs.CC/0210020},
-  timestamp = {Mon, 05 Dec 2011 18:05:18 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/cs-CC-0210020},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+@incollection{tetris,
+  title={Tetris is hard, even to approximate},
+  author={Demaine, Erik D and Hohenberger, Susan and Liben-Nowell, David},
+  booktitle={Computing and Combinatorics},
+  pages={351--363},
+  year={2003},
+  publisher={Springer}
 }
 
 @article{candy,
