--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -16,6 +16,7 @@
 \usepackage{float}
 \usepackage{tikz}
 \usepackage{mathtools}
+\usepackage{enumitem}
 \usepackage{calc}
 
 \usepackage[ireport, eng]{pkg/KTHEEtitlepage}
@@ -37,6 +38,7 @@
 
 \input{thesis/introduction.tex}
 \input{thesis/objective.tex}
+\input{thesis/rules.tex}
 %\input{thesis/background.tex}
 %\input{thesis/method.tex}
 %\input{thesis/results.tex}
