--- a/references/bibliography.bib
+++ b/references/bibliography.bib
@@ -29,3 +29,11 @@
   year={2007},
   publisher={Springer Berlin Heidelberg}
 }
+
+@online{wiki:lumines,
+   author = "Wikipedia",
+   title = "Lumines --- {W}ikipedia{,} The Free Encyclopedia",
+   year = "2015",
+   url = "\url{http://en.wikipedia.org/w/index.php?title=Lumines&oldid=641202548}",
+   urldate = "2015-03-04"
+ }
