--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -19,6 +19,9 @@
 \usepackage{enumitem}
 \usepackage{calc}
 
+\usepackage{caption}
+\usepackage{subcaption}
+
 \usepackage[ireport, eng]{pkg/KTHEEtitlepage}
 \DeclarePairedDelimiter\ceil{\lceil}{\rceil}
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
