--- a/pkg/blocks.tex
+++ b/pkg/blocks.tex
@@ -1,3 +1,13 @@
+\newcommand{\cellw}[2]
+{
+    \filldraw[fill=white, draw=black] (#1, #2) rectangle (#1+1, #2+1);
+}
+
+\newcommand{\cellb}[2]
+{
+    \filldraw[fill=gray, draw=black] (#1, #2) rectangle (#1+1, #2+1);
+}
+
 \newcommand{\lummonowhite}[2]
 {
     \filldraw[fill=white, draw=black] (#1,#2) rectangle (#1+1,#2+1);
