--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -1,5 +1,111 @@
 \section{Introduction}
 
+The video game Lumines was released in December 2004 in Japan for the PSP platform. The game was a major success for the developer Q Entertainment, and has since its original release been followed with a couple of sequels \cite{wiki:lumines}.
+
+Lumines is a two-dimensional grid game, in which a sequence of $2 \times 2$ dichromatic blocks falls, and the user can rotate and shift the block before its bottom cells reaches other cells, terrain, in the gameboard. When the block does reach existing terrain, it can no longer be shifted or rotated by the player. If both bottom cells of the block is supported by existing terrain, the block stays put on that terrain. Otherwise, the half of the block that is supported by terrain will fall down until it is. The player is then presented with the next block.
+
+\begin{figure}[H]
+    \centering
+    \resizebox{0.7\textwidth}{!}{
+    \begin{subfigure}[b]{0.45\linewidth}
+        \resizebox{\linewidth}{!}{
+        \begin{tikzpicture}
+            \lumx{0}{4}
+            \draw[thick, ->] (1,3.5) -- (1, 2.5);
+            \lumx{0}{0}
+            \draw [draw=none] rectangle (3, 7);
+        \end{tikzpicture}
+        \hspace{0.25cm}
+        \begin{tikzpicture}
+            \lumx{0}{2}
+            \lumx{0}{0}
+            \draw [draw=none] rectangle (3, 7);
+        \end{tikzpicture}
+        }
+        \caption{}
+    \end{subfigure}
+    \hspace{0.05\linewidth}
+    \begin{subfigure}[b]{0.45\linewidth}
+        \resizebox{\linewidth}{!}{
+        \begin{tikzpicture}
+            \lumx{1}{4}
+            \draw[thick, ->] (2,3.5) -- (2, 2.5);
+            \lumx{0}{0}
+            \draw [draw=none] rectangle (3, 7);
+        \end{tikzpicture}
+        \hspace{0.25cm}
+        \begin{tikzpicture}
+            \lumx{0}{0}
+            \cellb{1}{2}
+            \cellw{1}{3}
+            \cellw{2}{0}
+            \cellb{2}{1}
+            \draw [draw=none] rectangle (3, 7);
+        \end{tikzpicture}
+        }
+        \caption{}
+    \end{subfigure}
+    }
+    \caption{Block behavior with and without supporting terrain}
+\end{figure}
+
+If at any point the player forms a monochromatic $2 \times 2$ square, all cells belonging to that square is marked. Note that these squares may overlap, for example all cells within a monochromatic $2 \times 3$ rectangle is marked, since it consists of overlapping $2 \times 2$ monochromatic squares.
+
+\begin{figure}[H]
+    \centering
+    \resizebox{0.7\textwidth}{!}{
+        \begin{subfigure}[b]{.3\linewidth}
+        \fbox{
+        \begin{tikzpicture}
+            \cellw{0}{0}
+            \cellw{1}{0}
+            \cellb{2}{0}
+            \cellw{0}{1}
+            \cellw{2}{1}
+            \cellw{2}{2}
+            \cellb{0}{5}
+            \cellw{1}{5}
+            \cellb{0}{6}
+            \cellw{1}{6}
+            \draw [draw=none] (0,0) rectangle (3, 8);
+        \end{tikzpicture}
+        }
+        \end{subfigure}
+        \begin{subfigure}[b]{.3\linewidth}
+        \fbox{
+        \begin{tikzpicture}
+            \cellw{0}{0}
+            \cellw{1}{0}
+            \cellb{2}{0}
+            \cellw{0}{1}
+            \cellw{2}{1}
+            \cellw{2}{2}
+            \cellb{0}{2}
+            \cellw{1}{1}
+            \cellb{0}{3}
+            \cellw{1}{2}
+            \draw [draw=none] (0,0) rectangle (3, 8);
+        \end{tikzpicture}
+        }
+        \end{subfigure}
+        \begin{subfigure}[b]{.3\linewidth}
+        \fbox{
+        \begin{tikzpicture}
+            \draw (0,0) [draw=black, fill=red] rectangle (2,2);
+            \draw (1,1) [draw=black, fill=red] rectangle (3,3);
+            \draw (1,1) [draw=black, fill=red] rectangle (2,2);
+            \cellb{0}{2}
+            \cellb{0}{3}
+            \cellb{2}{0}
+            \draw [draw=none] (0,0) rectangle (3, 8);
+        \end{tikzpicture}
+        }
+        \end{subfigure}
+    }
+    \caption{Marking of $2 \times 2$ monochromatic squares}
+\end{figure}
+
+
 \begin{figure}[H]
     \centering
     \resizebox{0.9\textwidth}{!}{
