--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -1,8 +1,16 @@
 \section{Background}
 
-We find interest in analyzing this game because Lumines is to our knowledge not very researched when it comes to computational complexity. Similar puzzle games, such as Tetris, Bejeweled and Puyo Puyo has been more thoroughly examined in recent years, and it seems interesting to us how 
-Lumines will compare . Knowing more about the computational complexity of the game can give us an understanding on what would be required when developing an A.I to the game.  We also believe that the result of this study can help us understand more about the nature of computational complexity. With results from this and other reports on computational complexity of similar problems, one might be able to generalize and find a correlation between the problem type and the computational complexity. 
+We find interest in analyzing Lumines because it is to our knowledge not very researched when it comes to computational complexity. Similar puzzle games, such as Tetris, Bejeweled and Puyo Puyo has been more thoroughly examined in recent years, and it seems interesting to us how 
+Lumines will compare. Knowing more about the computational complexity of the game can give us an understanding on what would be required when developing an A.I to the game.  We also believe that the result of this study can help us understand more about the nature of computational complexity in video games. With results from this and other reports on computational complexity of similar problems, one might be able to generalize and find a correlation between the problem type and the computational complexity. 
 
-Quite a few reports concerning computational complexity in games have been published in recent years. During our research we have read some of these reports to get a good understanding about what research has been made. One of the more interesting reports for our problem domain has been a report on the complexity of Tetris. In this report we learn that Tetris is NP-complete, both when optimizing and approximating. Tetris is similar to Lumines in that it also consists of a grid-based game board and the main game mechanic is organizing sequences of pieces.
+\subsection{Existing studies}
+
+Quite a few reports concerning computational complexity in games have been published in recent years. During our research we have read some of these reports to get a good understanding what research has been made. These reports have covered games such as classical Nintendo games, 
+Lemmings, Minesweeper and aforementioned puzzle games. These problems have been shown to be either PSPACE-hard or NP-hard and in most cases completeness in the respective complexity class has been provnd.
+One of the more interesting reports for our problem domain has been a report on the complexity of Tetris. In this report we learn that Tetris is NP-complete, both when optimizing and approximating. Tetris is similar to Lumines in that it also consists of a grid-based game board and the main game mechanic is organizing sequences of pieces.
 
 When showing NP-completeness in Tetris, 3-Partition instances were mapped to instances of a defined game board with sequences of pieces bound to the integers from the 3-Partition instances. Because Lumines has the similarities to Tetris explained above, this approach is interesting when considering a reduction to Lumines as well.
+
+The existing research on Lumines that we have been able to find consists of a paper studying effective strategies. In this paper we learn that there exists strategies that can never lose, no matter what sequence of pieces are dropped. This is different to Tetris where losing can be inevitable if the computer is allowed to change the sequence according to how the player organizes the pieces. Another relevant difference the paper brings up is that in Lumines it is possible to create terrain that can not be cleared while in Tetris a game board can always be cleared if the player is given an appropriate sequence of pieces.
+
+
