--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -37,6 +37,7 @@
 \makeititle
 
 \input{thesis/introduction.tex}
+\input{thesis/background.tex}
 \input{thesis/objective.tex}
 \input{thesis/rules.tex}
 %\input{thesis/background.tex}
