--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -121,3 +121,8 @@ If at any point the player forms a monochromatic $2 \times 2$ square, all cells 
     \caption{The six pieces of lumines: M\{W,B\}, L\{W,B\}, H and X}
     \label{fig:pieces}
 \end{figure}
+
+\subsection{Motivation}
+
+We find interest in analyzing Lumines because it is to our knowledge not very researched when it comes to computational complexity. Tetris, a similar puzzle game has been more thoroughly examined in recent years, and it seems interesting to us how 
+Lumines will compare. Knowing more about the computational complexity of the game can give us an understanding on what would be required when developing an A.I to the game.  We also believe that the result of this study can help us understand more about the nature of computational complexity in video games. With results from this and other reports on computational complexity of similar problems, one might be able to generalize and find a correlation between the problem type and the computational complexity. 
