--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -2,7 +2,23 @@
 
 The video game Lumines was released in December 2004 in Japan for the PSP platform. The game was a major success for the developer Q Entertainment, and has since its original release been followed with a couple of sequels \cite{wiki:lumines}.
 
-Lumines is a two-dimensional grid game, in which a sequence of $2 \times 2$ dichromatic blocks falls, and the user can rotate and shift the block before its bottom cells reaches other cells, terrain, in the gameboard. When the block does reach existing terrain, it can no longer be shifted or rotated by the player. If both bottom cells of the block is supported by existing terrain, the block stays put on that terrain. Otherwise, the half of the block that is supported by terrain will fall down until it is. The player is then presented with the next block.
+\begin{figure}[H]
+    \centering
+    \resizebox{0.9\textwidth}{!}{
+    \begin{tikzpicture}
+        \lummonowhite{0}{0}
+        \lummonoblack{3}{0}
+        \lumlwhite{6}{0}
+        \lumlblack{9}{0}
+        \lumh{12}{0}
+        \lumx{15}{0}
+    \end{tikzpicture}
+    }
+    \caption{The six pieces of lumines: M\{W,B\}, L\{W,B\}, H and X}
+    \label{fig:pieces}
+\end{figure}
+
+Lumines is a two-dimensional grid game, in which a sequence of $2 \times 2$ dichromatic \textit{blocks} falls, and the user can rotate and shift the block before its bottom \text{cells} reaches other cells, \textit{terrain}, in the gameboard. When the block does reach existing terrain, it can no longer be shifted or rotated by the player. If both bottom cells of the block is supported by existing terrain, the block stays put on that terrain. Otherwise, the half of the block that is supported by terrain will fall down until it is. The player is then presented with the next block.
 
 \begin{figure}[H]
     \centering
@@ -49,7 +65,7 @@ Lumines is a two-dimensional grid game, in which a sequence of $2 \times 2$ dich
     \caption{Block behavior with and without supporting terrain}
 \end{figure}
 
-If at any point the player forms a monochromatic $2 \times 2$ square, all cells belonging to that square is marked. Note that these squares may overlap, for example all cells within a monochromatic $2 \times 3$ rectangle is marked, since it consists of overlapping $2 \times 2$ monochromatic squares.
+If at any point the player forms a monochromatic $2 \times 2$ square, all cells belonging to that square is \textit{marked}. Note that these squares may overlap, for example all cells within a monochromatic $2 \times 3$ rectangle is marked, since it consists of overlapping $2 \times 2$ monochromatic squares. At a regular pace a vertical \textit{sweep-line} scans the gameboard and removes all marked cells.
 
 \begin{figure}[H]
     \centering
@@ -102,22 +118,16 @@ If at any point the player forms a monochromatic $2 \times 2$ square, all cells 
         }
         \end{subfigure}
     }
-    \caption{Marking of $2 \times 2$ monochromatic squares}
+    \caption{Marking of $2 \times 2$ monochromatic squares (from \cite{lumines})}
 \end{figure}
 
+The version of Lumines found in the actual video games is played on a gameboard with 16 columns and 10 rows. The goal of the standard game mode in Lumines is to survive, to keep placing blocks inside the gameboard, for as long as possible and clear as much terrain as possible in the process. The blocks given to the player is generated randomly, and 3-block lookahead is provided. The game starts on partially filled gameboard, which varies in size depending on the difficulty level \cite{lumines}.
 
-\begin{figure}[H]
-    \centering
-    \resizebox{0.9\textwidth}{!}{
-    \begin{tikzpicture}
-        \lummonowhite{0}{0}
-        \lummonoblack{3}{0}
-        \lumlwhite{6}{0}
-        \lumlblack{9}{0}
-        \lumh{12}{0}
-        \lumx{15}{0}
-    \end{tikzpicture}
-    }
-    \caption{The six pieces of lumines: M\{W,B\}, L\{W,B\}, H and X}
-    \label{fig:pieces}
-\end{figure}
+\subsection{Problem definition}
+As is often the case with computational complexity analysis, our thesis will consider the generalized version of the game, which is played on a gameboard with $n$ rows and $m$ columns. The thesis will seek to formalize and (to the necessary degree) simplify Lumines, and in this new system's computational complexity characteristics. 
+
+\subsection{Problem statement}
+\begin{enumerate}
+        \item Is (standard mode) Lumines NP-complete?
+        \item Are all game modes of Lumines equally hard?
+\end{enumerate}
