--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -41,10 +41,7 @@
 
 \input{thesis/introduction.tex}
 \input{thesis/background.tex}
-\input{thesis/objective.tex}
-\input{thesis/rules.tex}
-%\input{thesis/background.tex}
-%\input{thesis/method.tex}
+\input{thesis/method.tex}
 %\input{thesis/results.tex}
 %\input{thesis/discussion.tex}
 \printbibliography
