--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -131,10 +131,10 @@ The methodology used is standard procedure in the domain of computational comple
 While the sweep-line is undoubtedly an important characteristic of Lumines, we have decided to assume that all marked terrain is instantly cleared. We will also consider the offline version of the game, where the whole sequence of blocks is known beforehand, rather than the having the block types generated probabilistically. This is our two main simplifications, altough a more thorough is of course provided in the relevant parts of \textbf{todo:method}. The impact of these simplifications on how much the results can tell us about the actual games is considered in \textbf{todo:discussion}.
 
 \subsection{Problem statement}
-\begin{enumerate}
+\begin{itemize}
         \item Is (standard mode) Lumines NP-complete?
         \item Are all game modes of Lumines equally hard?
-\end{enumerate}
+\end{itemize}
 
 \subsection{Motivation}
 
