--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -1,5 +1,7 @@
 \section{Background}
 
+\subsection{Reduction}
+
 \subsection{NP and PSPACE}
 NP is the complexity class of all decision problems where a yes-instance can be verified in polynomial time. If it is possible to reduce all problems in NP to a certain problem, that problem is said to be NP-hard. A problem is referred to as a NP-complete problem if it is shown that it is both in NP and NP-hard. From this follows that if it is possible to reduce a NP-complete problem to some problem in NP using polynomial time, that problem is NP-complete as well.
 
