--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -18,7 +18,7 @@ The video game Lumines was released in December 2004 in Japan for the PSP platfo
     \label{fig:pieces}
 \end{figure}
 
-Lumines is a two-dimensional grid game, in which a sequence of $2 \times 2$ dichromatic \textit{blocks} falls, and the user can rotate and shift the block before its bottom \text{cells} reaches other cells, \textit{terrain}, in the gameboard. When the block does reach existing terrain, it can no longer be shifted or rotated by the player. If both bottom cells of the block is supported by existing terrain, the block stays put on that terrain. Otherwise, the half of the block that is supported by terrain will fall down until it is. The player is then presented with the next block.
+Lumines is a two-dimensional grid game, in which a sequence of $2 \times 2$ dichromatic \textit{blocks} falls, and the user can rotate and shift the block before its bottom \text{cells} reaches other cells, \textit{terrain}, in the gameboard. When the block reach existing terrain, it can no longer be shifted or rotated by the player. If both bottom cells of the block is supported by existing terrain, the block stays put on that terrain. Otherwise, the half of the block that is not supported by terrain will fall down until it is. The player is then presented with the next block.
 
 \begin{figure}[H]
     \centering
