--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -9,7 +9,7 @@ PSPACE is the complexity class of all decision problems that can be solved by a 
 
 \subsection{Previous studies}
 
-Several reports concerning computational complexity in video games have been published in recent years. During our research we have read some of these reports to get a good understanding what research has been made. These reports have covered games such as classical Nintendo games, Lemmings, Minesweeper and Bejeweled. These problems have been shown to be either NP-hard or PSPACE-hard and in most cases completeness in the respective complexity class has been proven.
+Several reports concerning computational complexity in video games have been published in recent years. During our research we have read some of these reports to get a good understanding what research has been made. These reports have covered games such as classical Nintendo games\cite{classic}, Lemmings\cite{lemmings}, Minesweeper\cite{minesweeper} and Bejeweled\cite{candy}. These problems have been shown to be either NP-hard or PSPACE-hard and in most cases completeness in the respective complexity class has been proven.
 
 One of the more interesting reports for our problem domain has been a report on the computational complexity of Tetris. In this report we learn that Tetris is NP-complete,  both when optimizing and approximating. Tetris is similar to Lumines in that it also consists of a grid-based game board and the main game mechanic is organizing sequences of pieces.
 
