--- a/references/bibliography.bib
+++ b/references/bibliography.bib
@@ -65,3 +65,17 @@
   year={2012},
   publisher={Citeseer}
 }
+
+@book{algorithm,
+    author = {Kleinberg, Jon and Tardos, Eva},
+    title = {Algorithm Design},
+    publisher = {Addison-Wesley},
+    year = {2005}
+}
+
+@book{karp,
+  title={Reducibility among combinatorial problems},
+  author={Karp, Richard M},
+  year={1972},
+  publisher={Springer}
+}
