--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -9,6 +9,14 @@ PSPACE is the complexity class of all decision problems that can be solved by a 
 
 \subsection{The Subset Sum problem}
 
+The \textit{Subset Sum} Problem is defined as follows \cite[p.~491]{algorithm}:
+
+\begin{quote}
+Given natural numbers $w_1, \ldots, w_n$, and a target number $W$, is there a subset of $\{w_1, \ldots, w_n \}$ that adds up precisely to $W$?
+\end{quote}
+
+The Subset Sum Problem plays a crucial role in our paper; it is the problem we have chosen to reduce to the Lumines problem. It is known to be NP-complete \cite[p.~492]{algorithm}. In fact it is a special case of the Knapsack Problem \cite[p.~491]{algorithm}, one of Karp's 21 NP-complete problems he discusses in his 1972 paper \cite{karp}.
+
 \subsection{Previous studies}
 
 Several reports concerning computational complexity in video games have been published in recent years. During our research we have read some of these reports to get a good understanding what research has been made. These reports have covered games such as classical Nintendo games\cite{classic}, Lemmings\cite{lemmings}, Minesweeper\cite{minesweeper} and Bejeweled\cite{candy}. These problems have been shown to be either NP-hard or PSPACE-hard and in most cases completeness in the respective complexity class has been proven.
